--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -9,6 +9,10 @@
     height: 20px;
 }
 
+li img {
+  margin-bottom: 20px;
+}
+
 .alert-info {
     background-image: -webkit-linear-gradient(top, #e6ffe60 0%, #ccffcc 100%);
     background-image:      -o-linear-gradient(top, #e6ffe6 0%, #ccffcc 100%);
