make styles a bit better, mostly spacing

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -13,6 +13,14 @@ li img {
   margin-bottom: 20px;
 }
 
+footer {
+  margin-top: 20px;
+}
+
+.section img.align-center {
+  margin-bottom: 20px;
+}
+
 .alert-info {
     background-image: -webkit-linear-gradient(top, #e6ffe60 0%, #ccffcc 100%);
     background-image:      -o-linear-gradient(top, #e6ffe6 0%, #ccffcc 100%);
