--- a/2.1.0-dev/en/_static/bootstrap-sphinx.css
+++ b/2.1.0-dev/en/_static/bootstrap-sphinx.css
@@ -1,12 +1,31 @@
 /*
-* bootstrap-sphinx.css
-* ~~~~~~~~~~~~~~~~~~~~
-*
-* Sphinx stylesheet -- Twitter Bootstrap theme.
-*/
+ * bootstrap-sphinx.css
+ * ~~~~~~~~~~~~~~~~~~~~
+ *
+ * Sphinx stylesheet -- Bootstrap theme.
+ */
 
 .navbar-inverse .brand {
   color: #FFF;
+}
+
+/*
+ * Reset navbar styles from overrides in:
+ * https://bitbucket.org/birkenfeld/sphinx/commits/78d8ebf76b630ab4073a7328af9d91e8123b8d96
+ */
+.navbar .container {
+  padding-top: 0;
+}
+
+/*
+ * Reset the logo image dimensions. Sites like RTD can override with bad
+ * results on mobile (mega-huge logo...)
+ *
+ * https://github.com/ryan-roemer/sphinx-bootstrap-theme/issues/142
+ */
+.navbar-brand img {
+  width: auto;
+  height: 100%;
 }
 
 .page-top {
@@ -14,17 +33,20 @@
 }
 
 
-  
+
+
+
   body {
-  
-    padding-top: 40px;
-  
+    
+      padding-top: 40px;
+    
   }
   .page-top {
-  
-    top: 40px;
-  
+    
+      top: 40px;
+    
   }
+
 
 
 .navbar-inner {
@@ -154,7 +176,6 @@ table.field-list {
   }
   .bs-sidenav.affix {
     position: fixed; /* Undo the static from mobile first approach */
-    top: 80px;
   }
   .bs-sidenav.affix-bottom {
     position: absolute; /* Undo the static from mobile first approach */
