setting up the queries for the wrapper chapter

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -21,6 +21,13 @@ footer {
   margin-bottom: 20px;
 }
 
+p.admonition-title {
+    font-weight: bold;      
+    background-color: #D1D0CE;
+    border: #000000;
+} 
+
+
 .alert-info {
     background-image: -webkit-linear-gradient(top, #e6ffe60 0%, #ccffcc 100%);
     background-image:      -o-linear-gradient(top, #e6ffe6 0%, #ccffcc 100%);
@@ -28,7 +35,7 @@ footer {
     background-image:         linear-gradient(to bottom, #e6ffe6 0%, #ccffcc 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e6ffe6de', endColorstr='#ccffccc3', GradientType=0);
     background-repeat: repeat-x;
-    border-color: #dca7a7;
+    border-color: #348017;
 }
 
 div.topic {
