--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -45,3 +45,15 @@ div.topic {
 footer {
     background-color: #cce6ff;
 }
+
+
+.h4, .h5, .h6, h4, h5, h6 {
+    background-color: #cce6ff;
+}
+
+.h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+
