moved some sections one level up

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -46,8 +46,11 @@ footer {
     background-color: #cce6ff;
 }
 
+.h3, h3 {
+    font-size: 18px;
+}
 
-.h4, .h5, .h6, h4, h5, h6 {
+.h3, .h4, .h5, .h6, h3, h4, h5, h6 {
     background-color: #cce6ff;
 }
 
