Publishing latest foos4gBoston changes

--- a/2.4.11/en/_static/custom.css
+++ b/2.4.11/en/_static/custom.css
@@ -45,3 +45,18 @@ div.topic {
 footer {
     background-color: #cce6ff;
 }
+
+.h3, h3 {
+    font-size: 18px;
+}
+
+.h3, .h4, .h5, .h6, h3, h4, h5, h6 {
+    background-color: #cce6ff;
+}
+
+.h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+
