[pedestrian] refining pedestrian chapter

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -22,10 +22,10 @@ footer {
 }
 
 p.admonition-title {
-    font-weight: bold;      
+    font-weight: bold;
     background-color: #D1D0CE;
     border: #000000;
-} 
+}
 
 
 .alert-info {
@@ -59,4 +59,6 @@ footer {
     margin-bottom: 10px;
 }
 
-
+blockquote {
+  font-size: 14px;
+}
